# Learning_C

./: CMakeLists.txt  README.md
Basic_Programs/: 01_Using_if.c  01globalVSlocalvariable.c  02_Using_switch.c  02globalVSlocalvariable.c  03_array.c  04_array_student.c  05_hypotenuseCalculator.c  06_if_statements.c  07_switch_statements.c  09_calculator_program.c  10_AND_logical_operator.c  11_Conditions.c  11_Conditions.h  12_usingStrings.c  cards.c  functionfun.c  globalVSlocalvariable.c  loopyLoops.c  moreArrays.c  numberFun.c
