cmake_minimum_required(VERSION 3.27.8)
project(Learning_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Using_if Basic_Programs/01_Using_if.c)
add_executable(Using_switch Basic_Programs/02_Using_switch.c)
add_executable(array Basic_Programs/03_array.c)
add_executable(array_student Basic_Programs/04_array_student.c)
add_executable(clock Basic_Programs/05_clock.c)



