cmake_minimum_required(VERSION 3.27.8)
project(Learning_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Using_if Basic_Programs/01_Using_if.c)
add_executable(Using_switch Basic_Programs/02_Using_switch.c)
add_executable(array Basic_Programs/03_array.c)
add_executable(array_student Basic_Programs/04_array_student.c)
add_executable(numberFun Basic_Programs/numberFun.c)
add_executable(hypotenuseCalculator Basic_Programs/05_hypotenuseCalculator.c)
add_executable(if_statements Basic_Programs/06_if_statements.c)
add_executable(switch_statements Basic_Programs/07_switch_statements.c)
add_executable(temperature_conversion Basic_Programs/08_temperature_conversion.c)
add_executable(calculator_program Basic_Programs/09_calculator_program.c)
add_executable(AND_logical_operator Basic_Programs/10_AND_logical_operator.c)
add_executable(cards Basic_Programs/cards.c)
add_executable(moreArrays Basic_Programs/moreArrays.c)
add_executable(11_moreArrays Basic_Programs/11_moreArrays.c)
add_executable(03_array Basic_Programs/03_array.c)
add_executable(11_Conditions Basic_Programs/11_Conditions.c)
add_executable(12_usingStrings Basic_Programs/12_usingStrings.c)
add_executable(loopyLoops Basic_Programs/loopyLoops.c)
add_executable(globalVSlocalvariable Basic_Programs/globalVSlocalvariable.c)
add_executable(01globalVSlocalvariable Basic_Programs/01globalVSlocalvariable.c)
add_executable(02globalVSlocalvariable Basic_Programs/02globalVSlocalvariable.c)
add_executable(functionfun Basic_Programs/functionfun.c)



